This is *probably* sound so far

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "TODO_CRATE_NAME"
+name = "pinus"
 version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
 description = "TODO_DESCRIPTION"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Tamschi/TODO_CRATE_NAME"
-homepage = "https://github.com/Tamschi/TODO_CRATE_NAME/tree/v0.0.1"
-documentation = "https://docs.rs/TODO_CRATE_NAME/0.0.1"
+repository = "https://github.com/Tamschi/pinus"
+homepage = "https://github.com/Tamschi/pinus/tree/v0.0.1"
+documentation = "https://docs.rs/pinus/0.0.1"
 keywords = [] #TODO
 categories = [] #TODO
 readme = "README.md"
@@ -25,9 +25,15 @@ resolver = "2"
 publish = false
 
 [badges]
-is-it-maintained-issue-resolution = { repository = "Tamschi/TODO_CRATE_NAME" }
-is-it-maintained-open-issues = { repository = "Tamschi/TODO_CRATE_NAME" }
+is-it-maintained-issue-resolution = { repository = "Tamschi/pinus" }
+is-it-maintained-open-issues = { repository = "Tamschi/pinus" }
 maintenance = { status = "experimental" } # This may differ between branches.
+
+[dependencies]
+either = "1.6.1"
+parking_lot = "0.11.2"
+tap = "1.0.1"
+vec1 = "1.8.0"
 
 [dev-dependencies]
 cargo-husky = "1.5.0"
