Meta info and adjustments, but why does this compile?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,13 @@ name = "pinus"
 version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
-description = "TODO_DESCRIPTION"
+description = "A prickly BTreeMap. You can insert through shared references and values are pin-projected."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/Tamschi/pinus"
 homepage = "https://github.com/Tamschi/pinus/tree/v0.0.1"
 documentation = "https://docs.rs/pinus/0.0.1"
-keywords = [] #TODO
-categories = [] #TODO
+keywords = ["pin", "b-tree", "interior-mutability"]
+categories = ["data-structures", "rust-patterns"]
 readme = "README.md"
 include = [
 	"**/*.rs",
@@ -38,6 +38,7 @@ vec1 = "1.8.0"
 [dev-dependencies]
 cargo-husky = "1.5.0"
 doc-comment = "0.3.3"
+ergo-pin = "0.1.0"
 git_info = "0.1.2"
 version-sync = "0.9.1"
 wasm-bindgen-test = "0.3.27"
