--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ is-it-maintained-open-issues = { repository = "Tamschi/pinus" }
 maintenance = { status = "experimental" } # This may differ between branches.
 
 [dependencies]
+bumpalo = "3.7.0"
 parking_lot = "0.11.2"
 tap = "1.0.1"
 vec1 = "1.8.0"
