Added missing documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 	"todo-tree.regex.regex": "(($TAGS)|^\\s*- \\[ \\])",
 	"rust-analyzer.cargo.allFeatures": true,
 	"cSpell.words": [
+		"alues",
 		"pinus"
 	]
 }
