--- a/.github/workflows/auto-approve_dependabot.yml
+++ b/.github/workflows/auto-approve_dependabot.yml
@@ -21,18 +21,18 @@ jobs:
           script: |
             // See <https://octokit.github.io/rest.js/v18#pulls>,
             // <https://github.com/marketplace/actions/github-script#welcome-a-first-time-contributor>.
-            const reviews = await github.pulls.listReviews({
+            const reviews = await github.rest.pulls.listReviews({
               owner: context.payload.repository.owner.login,
               repo: context.payload.repository.name,
               pull_number: context.payload.pull_request.number,
             });
 
             for (review of reviews.data) {
-              console.log(`A review exists. Exiting.`)
+              console.log(`A review exists. Exiting.`);
               return;
             }
 
-            await github.pulls.createReview({
+            await github.rest.pulls.createReview({
               owner: context.payload.repository.owner.login,
               repo: context.payload.repository.name,
               pull_number: context.payload.pull_request.number,
